--- a/DevDaysBrussels_DmDemoApp/Views/VideoView.xaml
+++ b/DevDaysBrussels_DmDemoApp/Views/VideoView.xaml
@@ -26,7 +26,7 @@
         </Grid.ChildrenTransitions>
 
 
-        <!--<Grid
+        <Grid
             x:Name="MyPlayerGrid"
             Grid.Row="0"
             MinWidth="200"
@@ -38,7 +38,7 @@
                     <RepositionThemeTransition />
                 </TransitionCollection>
             </Grid.ChildrenTransitions>
-        </Grid>-->
+        </Grid>
 
 
         <Button
